# bio-llm

./: notes.jsonl
gbif-datasets-mistral-peft/: gbif_datasets_mixtral_peft.ipynb  gbif_datasets_mixtral_peft_brev.ipynb
rag-gbif-agent/: pyproject.toml
rag-gbif-agent/gbif-api-agents-app/app/gbif_api_agents/: __init__.py  chain.py
rag-gbif-mistral/gbif-datasets-rag-app/: README.md  pyproject.toml
rag-gbif-mistral/gbif-datasets-rag-app/app/: server.py
rag-gbif-mistral/gbif-datasets-rag-app/app/gbif_datasets_rag/: chain.py  datasets_nl_queries.txt  models.py  run.py  run_tests.py
rag-gbif-private/datasets-chat-app/: README.md  pyproject.toml
rag-gbif-private/datasets-chat-app/app/: server.py
rag-gbif-private/datasets-chat-app/datasmall/: datasets.jsonl
rag-gbif-private/rag_chroma_private/: chain.py
