[tool.poetry]
name = "rag-gbif-agent"
version = "0.1.0"
description = "Private RAG using local LLM Agents"
authors = [
    "Federico Méndez <federiomh@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.325"
tiktoken = ">=0.5.1"
beautifulsoup4 = ">=4.12.2"
gbif_api_agents = {path = "packages/gbif_api_agents", develop = true}

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[tool.templates-hub]
use-case = "rag"
author = "LangChain"
integrations = ["Ollama"]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
